--- a/src/components/profilePage/ResumeContent/ResumeContent.module.css
+++ b/src/components/profilePage/ResumeContent/ResumeContent.module.css
@@ -61,7 +61,6 @@
   text-transform: uppercase;
   margin: 0 0 24px 0;
   padding-bottom: 12px;
-  border-bottom: 2px solid var(--cloud);
   letter-spacing: 0.05em;
 }
 
@@ -159,6 +158,7 @@
   width: 100%;
   border: 1px dashed var(--navy);
   color: var(--navy);
+  background: var(--color-background)
 }
 
 .skillsContainer {
@@ -168,7 +168,7 @@
 }
 
 .skillTag {
-  background: var(--cloud);
+  background: var(--color-background);
   border: 1px solid var(--lavand);
   border-radius: 12px;
   padding: 8px 16px;
@@ -195,6 +195,14 @@
   border: 1px solid var(--lavand);
   border-radius: 8px;
   font-family: var(--font-family-sans), serif;
+  background: var(--color-background);
+  transition: all 0.2s;
+  color: var(--color-primary-blue);
+}
+
+.input:focus {
+  background-color: white;
+  border-color: var(--lavand);
 }
 
 .addSkillButton {
@@ -228,7 +236,7 @@
   color: var(--maroon);
 }
 .cancelButton:hover {
-  background: #fff5f5;
+  background: var(--color-background);
 }
 
 .textarea {
@@ -237,7 +245,7 @@
   padding: 16px;
   border: 1px solid var(--lavand);
   border-radius: var(--radius-md);
-  background: var(--cloud);
+  background: var(--color-background);
   font-family: var(--font-family-sans), serif;
   font-size: 16px;
   line-height: 1.6;
@@ -309,7 +317,7 @@
   border-radius: var(--radius-md);
   border: 1px solid var(--lavand);
   font-size: 16px;
-  background: var(--cloud);
+  background: var(--color-background);
   margin-bottom: 24px;
   cursor: pointer;
 }
@@ -343,5 +351,5 @@
   transition: background 0.2s;
 }
 .modalButtonSecondary:hover {
-  background: var(--cloud);
+  background: var(--color-background);
 }
